<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>br.com</groupId>
        <artifactId>golden-awards-worst-movies</artifactId>
        <version>1.0.0</version>
    </parent>
    <artifactId>golden-awards-worst-movies-application</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>golden-awards-worst-movies-application</name>
    <description>golden-awards-worst-movies-application</description>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>br.com</groupId>
            <artifactId>golden-awards-worst-movies-parent-pom</artifactId>
            <version>${project.version}</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>br.com</groupId>
            <artifactId>golden-awards-worst-movies-domain</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>br.com</groupId>
            <artifactId>golden-awards-worst-movies-infrastructure</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>5.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**</include>
                    <!-- Include other file extensions if needed -->
                </includes>
            </resource>
            <!-- Include additional resource directories if needed -->
        </resources>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
